[REX]: now hopefully all related sources for astDump are in one folder, src/midend/astDump, including both for the DOT and PDF. We will add sources for the other two dumping methods (JSON and TEXT) later on. 3rdPartyLibraries/MSTL is completely removed after this.

--- a/src/3rdPartyLibraries/Makefile.am
+++ b/src/3rdPartyLibraries/Makefile.am
@@ -1,9 +1,6 @@
 # This should not depend on ROSE in any way so I don't think we need this
 # include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs
 
-# SUBDIRS = MSTL libharu-2.1.0 fortran-parser java-parser antlr-jars qrose
-# checkPointLibrary
-
 SUBDIRS =
 
 # MS (1/25/21): include json-related code
@@ -13,7 +10,7 @@ if ROSE_BUILD_FORTRAN_LANGUAGE_SUPPORT
    SUBDIRS += fortran-parser
 endif
 
-SUBDIRS += MSTL antlr-jars
+SUBDIRS += antlr-jars
 if ROSE_WITH_LIBHARU
 SUBDIRS += libharu-2.1.0 
 endif
