--- a/src/midend/astDump/CMakeLists.txt
+++ b/src/midend/astDump/CMakeLists.txt
@@ -6,7 +6,8 @@ add_library( astDump OBJECT
   walrus.C
   includeGraph.C
   AstDOTGeneration.C
-  AstPDFGeneration.C)
+  AstPDFGeneration.C
+  PDFGeneration.C)
 add_dependencies(astDump rosetta_generated)
 
 
@@ -15,5 +16,9 @@ add_dependencies(astDump rosetta_generated)
 install(FILES  AstAttributeDOT.h astGraph.h astGraphTemplateImpl.h wholeAST.h
                wholeAST_API.h copyGraph.h walrus.h
                intermediateRepresentationNodeGraphs.h
-               includeGraph.h AstDOTGeneration.h AstPDFGeneration.h
+               includeGraph.h
+               AstDOTGeneration.h AstPDFGeneration.h
+	       DOTGeneration.h DOTGenerationImpl.h DOTGraphInterface.h
+               DOTRepresentation.h DOTRepresentationImpl.h DOTSubgraphRepresentation.h
+               DOTSubgraphRepresentationImpl.h PDFGeneration.h
         DESTINATION ${INCLUDE_INSTALL_DIR})
