--- a/src/midend/astDump/Makefile.am
+++ b/src/midend/astDump/Makefile.am
@@ -9,9 +9,10 @@ noinst_LTLIBRARIES = libastDump.la
 # libastDump_la_SOURCES = astGraph.C AstAttributeDOT.C wholeAST.C copyGraph.C walrus.C intermediateRepresentationNodeGraphs.C
 libastDump_la_SOURCES = astGraph.C AstAttributeDOT.C wholeAST.C copyGraph.C \
                         walrus.C intermediateRepresentationNodeGraphs.C includeGraph.C \
-			AstDOTGeneration.C
+                        AstDOTGeneration.C \
+                        DOTGraphInterface.C
 if ROSE_WITH_LIBHARU
-libastDump_la_SOURCES += AstPDFGeneration.C
+libastDump_la_SOURCES += AstPDFGeneration.C PDFGeneration.C
 endif
 
 #   colorFilesTraversal.C  colorMemoryPoolTraversal.C \
@@ -24,10 +25,14 @@ libastDump_la_DEPENDENCIES =
 pkginclude_HEADERS = AstAttributeDOT.h astGraph.h astGraphTemplateImpl.h \
                      wholeAST.h wholeAST_API.h copyGraph.h walrus.h \
                      intermediateRepresentationNodeGraphs.h includeGraph.h \
-		     AstDOTGeneration.h
+                     AstDOTGeneration.h \
+                     DOTGeneration.h DOTRepresentation.h \
+                     DOTSubgraphRepresentation.h DOTGraphInterface.h \
+                     DOTRepresentationImpl.h DOTGenerationImpl.h \
+                     DOTSubgraphRepresentationImpl.h
 
 if ROSE_WITH_LIBHARU
-pkginclude_HEADERS += AstPDFGeneration.h
+pkginclude_HEADERS += AstPDFGeneration.h PDFGeneration.h
 endif
 
-EXTRA_DIST = CMakeLists.txt
+EXTRA_DIST = CMakeLists.txt MSTL.docs
