--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -117,8 +117,7 @@ set(rose_LIB_SRCS
   $<TARGET_OBJECTS:includeDirectivesProcessing>
   $<TARGET_OBJECTS:astPostProcessing>
   $<TARGET_OBJECTS:trans_tracking>
-  $<TARGET_OBJECTS:RoseAST>
-  $<TARGET_OBJECTS:mstl>)
+  $<TARGET_OBJECTS:RoseAST>)
 
 if(NOT enable-internalFrontendDevelopment)
   list(APPEND rose_LIB_SRCS
