[REX]: ROSE code reorganizing: Moving src/Rose/AST/Utils.h to src/frontend/SageIII/astFixup/edge_ptr_repl.h and src/Rose/AST/utils/edge_ptr_repl.C -> src/frontend/SageIII/astFixup/edge_ptr_repl.C These two files are for fixup utility. Thus we move to astFixup folder

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -68,8 +68,7 @@ pkginclude_HEADERS = \
 nobase_pkginclude_HEADERS=						\
 	Rose/AST/Checker.h						\
 	Rose/AST/cmdline.h						\
-	Rose/AST/Defect.h						\
-	Rose/AST/Utils.h
+	Rose/AST/Defect.h
 
 ########################################################################################################################
 
