--- a/src/Rose/AST/Makefile.am
+++ b/src/Rose/AST/Makefile.am
@@ -7,16 +7,14 @@ noinst_LTLIBRARIES = libRoseAST.la
 libRoseAST_la_SOURCES = \
   graphviz.C \
   checker/cmdline.C checker/checker.C \
-  checker/integrity_edges.C checker/integrity_declarations.C checker/integrity_symbols.C checker/integrity_types.C \
-  utils/edge_ptr_repl.C
+  checker/integrity_edges.C checker/integrity_declarations.C checker/integrity_symbols.C checker/integrity_types.C
 libRoseAST_la_LIBADD = 
 
 libRoseAST_la_public_includedir = $(prefix)/include/Rose
 libRoseAST_la_public_include_HEADERS =
 
 libRoseAST_la_includedir = $(prefix)/include/Rose/AST
-libRoseAST_la_include_HEADERS = cmdline.h Checker.h Defect.h Utils.h
-
+libRoseAST_la_include_HEADERS = cmdline.h Checker.h Defect.h
 
 EXTRA_DIST = CMakeLists.txt
 
