--- a/src/frontend/SageIII/astFixup/CMakeLists.txt
+++ b/src/frontend/SageIII/astFixup/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(astFixup OBJECT
-  AstFixup.C fixupforGnuBackendCompiler.C fixupInClassDataInitialization.C
+  AstFixup.C edge_ptr_repl.C fixupforGnuBackendCompiler.C fixupInClassDataInitialization.C
   removeInitializedNamePtr.C fixupDeclarations2.C fixupFunctionDefinitions.C
   fixupStorageAccessOfForwardTemplateDeclarations.C
   fixupSourcePositionInformation.C fixupEnumValues.C
@@ -9,7 +9,7 @@ add_dependencies(astFixup rosetta_generated)
 
 ########### install files ###############
 
-install(FILES  AstFixup.h fixupFunctionDefinitions.h
+install(FILES  AstFixup.h edge_ptr_repl.h fixupFunctionDefinitions.h
     fixupStorageAccessOfForwardTemplateDeclarations.h removeInitializedNamePtr.h
     fixupforGnuBackendCompiler.h fixupInClassDataInitialization.h
     fixupTemplateDeclarations.h fixupSourcePositionInformation.h
