--- a/src/Rose/AST/CMakeLists.txt
+++ b/src/Rose/AST/CMakeLists.txt
@@ -2,8 +2,7 @@ add_library(RoseAST OBJECT
   graphviz.C
   #io/merge.C io/link.C io/delete.C io/share.C io/load.C
   checker/cmdline.C checker/checker.C
-  checker/integrity_edges.C checker/integrity_declarations.C checker/integrity_symbols.C checker/integrity_types.C
-  utils/edge_ptr_repl.C)
+  checker/integrity_edges.C checker/integrity_declarations.C checker/integrity_symbols.C checker/integrity_types.C)
 
 add_dependencies(RoseAST rosetta_generated)
 
@@ -11,5 +10,5 @@ add_dependencies(RoseAST rosetta_generated)
 ########### install files ###############
 
 install(FILES
-  cmdline.h Checker.h Defect.h Utils.h
+  cmdline.h Checker.h Defect.h
   DESTINATION ${INCLUDE_INSTALL_DIR}/Rose/AST)
