[REX]:deBoost: replace boost::replace_all_copy with Rose::StringUtility::replaceAllCopy

--- a/src/util/StringUtility/CMakeLists.txt
+++ b/src/util/StringUtility/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(util_StringUtility OBJECT
-  Convert.C Escape.C FileNameClassifier.C FileUtility.C NumberToString.C Predicate.C SplitJoin.C StringToNumber.C)
+  Convert.C Escape.C FileNameClassifier.C FileUtility.C NumberToString.C Predicate.C Replace.C SplitJoin.C StringToNumber.C)
 
 install(
-  FILES Convert.h Escape.h FileUtility.h NumberToString.h Predicate.h SplitJoin.h StringToNumber.h BitOps.h Constants.h StringUtility.h
+  FILES Convert.h Escape.h FileUtility.h NumberToString.h Predicate.h Replace.h SplitJoin.h StringToNumber.h BitOps.h Constants.h StringUtility.h
   DESTINATION ${INCLUDE_INSTALL_DIR}/util/StringUtility)
