--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -201,13 +201,13 @@ endif(WIN32)
 # second can check again including optional components.  If the version of cmake is high enough you can use an
 # OPTIONAL_COMPONENTS clause instead, but that wasn't introduced until 3.11."
 find_package(Boost 1.47.0
-  COMPONENTS chrono date_time iostreams program_options random regex system thread
+  COMPONENTS chrono date_time iostreams program_options random regex system
   REQUIRED)
 if(NOT Boost_FOUND)
   message(FATAL_ERROR "Could not find Boost version 1.35.0 or newer command")
 endif()
 find_package(Boost 1.47.0
-  COMPONENTS chrono date_time iostreams program_options random regex system thread serialization)
+  COMPONENTS chrono date_time iostreams program_options random regex system serialization)
 include_directories(${Boost_INCLUDE_DIRS})
 
 # Paths to install header, executable, and libraries
@@ -228,13 +228,13 @@ set(USE_CMAKE 1)
 set(HAVE_BOOST ${Boost_FOUND})
 set(HAVE_BOOST_SERIALIZATION_LIB ${Boost_SERIALIZATION_FOUND})
 set(HAVE_BOOST_DATE_TIME ${Boost_DATE_TIME_FOUND})
-set(HAVE_BOOST_FILESYSTEM ${Boost_FILESYSTEM_FOUND})
+#set(HAVE_BOOST_FILESYSTEM ${Boost_FILESYSTEM_FOUND})
 set(HAVE_BOOST_PROGRAM_OPTIONS ${Boost_PROGRAM_OPTIONS_FOUND})
 set(HAVE_BOOST_REGEX ${Boost_REGEX_FOUND})
 set(HAVE_BOOST_SYSTEM ${Boost_SYSTEM_FOUND})
-set(HAVE_BOOST_THREAD ${Boost_THREAD_FOUND})
-set(HAVE_BOOST_WAVE ${Boost_WAVE_FOUND})
-set(USE_ROSE_BOOST_WAVE_SUPPORT ${Boost_WAVE_FOUND})
+#set(HAVE_BOOST_THREAD ${Boost_THREAD_FOUND})
+#set(HAVE_BOOST_WAVE ${Boost_WAVE_FOUND})
+#set(USE_ROSE_BOOST_WAVE_SUPPORT ${Boost_WAVE_FOUND})
 
 ########################################################################################################################
 # ROSETTA
